--- a/styles.css
+++ b/styles.css
@@ -23,9 +23,10 @@ button {
   margin: 10px;
   padding: 10px 20px;
   background-color: darkgreen;
-  color: white;
+  color: black;
   border: none;
   cursor: pointer;
+  font-weight: bold;
 }
 
 .hidden {
@@ -44,4 +45,6 @@ button {
   border: none;
   cursor: pointer;
   text-decoration: underline;
+  font-weight: bold;
+  display: inline-block; 
 }
